# soil-moisture-monitor

./: .gitignore  How_to_create_git.md  pyproject.toml  requirements.txt
docs/: To_do_list.md
edge/src/: test_api.py
edge/src/capture/: mac_capture.py
ml/configs/: resnet_config.yaml
ml/models/: ridge_regressor.joblib  ridge_regressor_resnet_mapie.joblib
ml/scripts/: generate_labels.py
ml/src/feature_extraction/: extract_features.py
ml/src/inference/: predict_humidity.py  predict_humidity_dinov3.py.backup  predict_moisture.py
ml/src/models/: resnet_feature_extractor.py
ml/src/training/: test_mapie.py  train_regressor.py  train_resnet_regressor.py
scripts/: auto_capture_loop.sh  capture_and_predict.sh  deploy_to_vm.sh  test_complete_pipeline.sh  test_json_export.sh
vm/src/: .env_example  api.py  mqtt_client.py
